# s4_filesystem_interface

./: CMakeLists.txt
src/: CMakeLists.txt
src/fs/: ifilesystem.hpp
