set(S4_FILESYSTEM_INCLUDE ${CMAKE_CURRENT_LIST_DIR})

# gather source files list
file(GLOB_RECURSE S4_FILESYSTEM_SRCS RELATIVE ${CMAKE_CURRENT_LIST_DIR}
    ${S4_FILESYSTEM_INCLUDE}/*.cpp 
    ${S4_FILESYSTEM_INCLUDE}/*.hpp 
    ${S4_FILESYSTEM_INCLUDE}/*.hpp)
GenerateSourceGoups("${S4_FILESYSTEM_SRCS}")

add_library(${S4_FILESYSTEM_TARGET} INTERFACE ${S4_FILESYSTEM_SRCS})
target_compile_features(${S4_FILESYSTEM_TARGET} INTERFACE cxx_std_20)
target_include_directories(${S4_FILESYSTEM_TARGET} INTERFACE ${S4_FILESYSTEM_INCLUDE})